--- a/src/main/resources/com/example/delivery_of_services_application/log_in.fxml
+++ b/src/main/resources/com/example/delivery_of_services_application/log_in.fxml
@@ -7,33 +7,34 @@
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #008B8B;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="615.0" style="-fx-background-color: #FCF3CF;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-       <ImageView fitHeight="182.0" fitWidth="381.0" layoutX="109.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
-           <image>
-               <Image url="@../../images/img1.jpg" />
-           </image>
-       </ImageView>
-      <Button layoutX="274.0" layoutY="347.0" mnemonicParsing="false" text="LOG IN " textFill="#5aaea9">
+      <Button alignment="CENTER" layoutX="346.0" layoutY="263.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="206.0" style="-fx-background-color: #FFD700;" text="Login" textFill="#212222">
          <effect>
             <InnerShadow>
                <color>
-                  <Color red="1.0" green="0.7833333611488342" />
+                  <Color red="0.05263157933950424" green="0.052350010722875595" blue="0.051332034170627594" />
                </color>
             </InnerShadow>
          </effect>
       </Button>
-      <TextField layoutX="166.0" layoutY="200.0" prefHeight="25.0" prefWidth="281.0" promptText="User Name">
+      <TextField layoutX="346.0" layoutY="119.0" prefHeight="29.0" prefWidth="206.0" promptText="Username">
          <font>
             <Font size="14.0" />
          </font>
+         <effect>
+            <DropShadow />
+         </effect>
       </TextField>
-      <PasswordField layoutX="166.0" layoutY="238.0" prefHeight="25.0" prefWidth="281.0" promptText="Password">
+      <PasswordField layoutX="346.0" layoutY="161.0" prefHeight="29.0" prefWidth="206.0" promptText="Password">
          <font>
             <Font size="14.0" />
          </font>
+         <effect>
+            <DropShadow />
+         </effect>
       </PasswordField>
-      <MenuButton layoutX="267.0" layoutY="282.0" mnemonicParsing="false" popupSide="RIGHT" text="Role" textFill="#34b7bc">
+      <MenuButton alignment="CENTER" contentDisplay="RIGHT" layoutX="346.0" layoutY="212.0" mnemonicParsing="false" popupSide="RIGHT" prefHeight="30.0" prefWidth="206.0" style="-fx-background-color: #FFD700;" text="Role" textAlignment="CENTER" textFill="#0a0a0a" underline="true">
         <items>
           <MenuItem mnemonicParsing="false" text="Customer" />
           <MenuItem mnemonicParsing="false" text="Provider" />
@@ -41,7 +42,81 @@
          <font>
             <Font size="14.0" />
          </font>
+         <effect>
+            <InnerShadow>
+               <color>
+                  <Color red="0.04385964944958687" green="0.04385964944958687" blue="0.04385964944958687" />
+               </color>
+            </InnerShadow>
+         </effect>
       </MenuButton>
+      <Label layoutX="253.0" layoutY="120.0" prefHeight="28.0" prefWidth="93.0" text="Username" textFill="#212221">
+         <font>
+            <Font name="System Bold Italic" size="18.0" />
+         </font>
+         <effect>
+            <DropShadow />
+         </effect>
+      </Label>
+      <Label layoutX="253.0" layoutY="162.0" prefHeight="28.0" prefWidth="93.0" text="Password" textFill="#1e1e1e">
+         <font>
+            <Font name="System Bold Italic" size="18.0" />
+         </font>
+         <effect>
+            <DropShadow />
+         </effect>
+      </Label>
+      <Button layoutX="423.0" layoutY="348.0" mnemonicParsing="false" style="-fx-background-color: #FFD700;" text="Cancel" textFill="RED">
+         <effect>
+            <InnerShadow>
+               <color>
+                  <Color red="0.9473684430122375" green="0.035087719559669495" blue="0.035087719559669495" />
+               </color>
+            </InnerShadow>
+         </effect></Button>
+      <Button layoutX="346.0" layoutY="303.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="206.0" style="-fx-background-color: #FFD700;" text="Registration" textFill="#171717">
+         <effect>
+            <InnerShadow>
+               <color>
+                  <Color red="0.07016099989414215" green="0.07017543911933899" blue="0.06930907815694809" />
+               </color>
+            </InnerShadow>
+         </effect>
+      </Button>
+      <ImageView fitHeight="65.0" fitWidth="76.0" layoutX="412.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../images/img3.jpg" />
+         </image>
+         <effect>
+            <DropShadow />
+         </effect>
+      </ImageView>
+      <AnchorPane layoutX="-5.0" layoutY="-4.0" prefHeight="406.0" prefWidth="252.0" style="-fx-background-color: #DC8B33;">
+         <effect>
+            <DropShadow />
+         </effect>
+         <children>
+             <ImageView fitHeight="194.0" fitWidth="206.0" layoutX="18.0" layoutY="136.0" pickOnBounds="true" preserveRatio="true">
+                 <image>
+                     <Image url="@../../images/img2.jpg" />
+                 </image>
+               <effect>
+                  <DropShadow />
+               </effect>
+             </ImageView>
+            <Label layoutX="18.0" layoutY="26.0" prefHeight="90.0" prefWidth="234.0" text="Delivery of Services" textFill="#dce619">
+               <font>
+                  <Font name="System Bold Italic" size="24.0" />
+               </font>
+               <effect>
+                  <DropShadow />
+               </effect>
+            </Label>
+         </children>
+      </AnchorPane>
 
    </children>
+   <effect>
+      <DropShadow />
+   </effect>
 </AnchorPane>
