--- a/src/main/resources/register.fxml
+++ b/src/main/resources/register.fxml
@@ -18,7 +18,7 @@
          <children>
             <ImageView fitHeight="150.0" fitWidth="195.0" layoutX="43.0" layoutY="125.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../images/img2.jpg" />
+                  <Image url="@com/images/img2.jpg" />
                </image>
             </ImageView>
             <Label layoutX="15.0" layoutY="14.0" prefHeight="58.0" prefWidth="223.0" text="Delivery of Services">
